--- a/valohai.yaml
+++ b/valohai.yaml
@@ -2,29 +2,63 @@
     name: convert-superbai
     image: valohai/yolov3-tf2:cpu
     command:
-    - python tools/superbai/superbai.py
+    - pip install -r requirements.txt
+    - python tools/superbai/superbai.py {parameters}
     inputs:
     - name: images
+      default:
+      - datum://017a71bc-5e27-e0d2-a2ff-676ca416bcf1
       optional: false
     - name: labels
+      default:
+      - datum://017a71be-47af-4b23-e2e9-ab711a71eb77
       optional: false
-    environment: azure-westeurope-f2sv2
 - step:
-    name: weights
+    name: detect
     image: valohai/yolov3-tf2:cpu
     command:
-    - python ./weights.py {parameters}
+    - python detect.py {parameters}
     parameters:
-    - name: weights_num_classes
-      default: 80
+    - name: size
+      default: 416
+      multiple-separator: ','
       optional: false
       type: integer
     inputs:
-    - name: weights
-      default:
-      - https://pjreddie.com/media/files/yolov3.weights
+    - name: classes
       optional: false
+    - name: model
+      optional: false
+    - name: image
+      optional: true
     environment: azure-westeurope-f2sv2
+- step:
+    name: request generator
+    image: python:3.7
+    command:
+    - pip install valohai-utils==0.1.10
+    - python ./test_request.py {parameters}
+    parameters:
+    - name: endpoint
+      default: https://valohai.cloud/valohai/yolov3-tf2/yolov3/production/predict
+      multiple-separator: ','
+      optional: false
+      type: string
+    - name: min_seconds
+      default: 60
+      multiple-separator: ','
+      optional: false
+      type: integer
+    - name: max_seconds
+      default: 600
+      multiple-separator: ','
+      optional: false
+      type: integer
+    inputs:
+    - name: images
+      default:
+      - datum://017a71bc-5e27-e0d2-a2ff-676ca416bcf1
+      optional: false
 - step:
     name: train
     image: valohai/yolov3-tf2:gpu
@@ -33,22 +67,27 @@
     parameters:
     - name: batch_size
       default: 8
+      multiple-separator: ','
       optional: false
       type: integer
     - name: epochs
       default: 10
+      multiple-separator: ','
       optional: false
       type: integer
     - name: learning_rate
       default: 0.001
+      multiple-separator: ','
       optional: false
       type: float
     - name: weights_num_classes
       default: 80
+      multiple-separator: ','
       optional: false
       type: integer
     - name: size
       default: 416
+      multiple-separator: ','
       optional: false
       type: integer
     inputs:
@@ -62,46 +101,57 @@
       optional: false
     environment: azure-westeurope-nc6
 - step:
-    name: detect
+    name: weights
     image: valohai/yolov3-tf2:cpu
     command:
-    - python detect.py {parameters}
+    - python ./weights.py {parameters}
     parameters:
-    - name: size
-      default: 416
+    - name: weights_num_classes
+      default: 80
+      multiple-separator: ','
       optional: false
       type: integer
     inputs:
-    - name: classes
+    - name: weights
+      default:
+      - https://pjreddie.com/media/files/yolov3.weights
       optional: false
-    - name: model
-      optional: false
-    - name: image
-      optional: true
     environment: azure-westeurope-f2sv2
+- endpoint:
+    name: predict
+    description: predict class from image
+    files:
+    - name: model
+      description: Model file
+      path: model.zip
+    image: valohai/yolov3-tf2:cpu
+    wsgi: predict_wsgi:predict_wsgi
 - pipeline:
-    name: train-superbai
+    name: train
     edges:
     - configuration: {}
-      source: convert-superbai.output.classes.txt
+      source: preprocess.output.classes.txt
       target: train.input.classes
     - configuration: {}
-      source: convert-superbai.output.train/*
+      source: preprocess.output.train/*
       target: train.input.train
     - configuration: {}
-      source: convert-superbai.output.test/*
+      source: preprocess.output.test/*
       target: train.input.test
     - configuration: {}
-      source: convert-superbai.output.classes.txt
-      target: detect.input.classes
+      source: preprocess.output.classes.txt
+      target: evaluate.input.classes
     - configuration: {}
       source: weights.output.model/*
       target: train.input.model
     - configuration: {}
       source: train.output.model/*
-      target: detect.input.model
+      target: evaluate.input.model
+    - configuration: {}
+      source: evaluate.output.model/model.zip
+      target: deploy.file.predict.model
     nodes:
-    - name: convert-superbai
+    - name: preprocess
       override: {}
       step: convert-superbai
       type: execution
@@ -113,7 +163,13 @@
       override: {}
       step: train
       type: execution
-    - name: detect
+    - name: evaluate
       override: {}
       step: detect
       type: execution
+    - name: deploy
+      aliases: []
+      deployment: yolov3
+      endpoints:
+      - predict
+      type: deployment
