--- a/valohai.yaml
+++ b/valohai.yaml
@@ -7,11 +7,11 @@
     inputs:
     - name: images
       default:
-      - datum://017a71bc-5e27-e0d2-a2ff-676ca416bcf1
+      - datum://images
       optional: false
     - name: labels
       default:
-      - datum://017a71be-47af-4b23-e2e9-ab711a71eb77
+      - datum://labels
       optional: false
 - step:
     name: detect
